# serverless-python-fastapi

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
